# rectify-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/rectify/: rectify.h
src/lib/: CMakeLists.txt  rectify.c
src/test/: CMakeLists.txt  main.c  test.c
